--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Indie+Flower">
 </head>
-<body style="font-family: Helvetica;">
+<body style="background-color: rgba(51, 35, 45, 0.7); background-image: none; font-family: 'Indie Flower';">
   <app-root></app-root>
 </body>
 </html>
